# solana_groth16_verifier

./: Anchor.toml
programs/solana_groth16_verifier/: Cargo.toml
programs/solana_groth16_verifier/src/: errors.rs  lib.rs  public_inputs.rs  verifying_key.rs
programs/solana_groth16_verifier/src/instructions/: mod.rs  send_proof.rs  setup_circuit.rs
programs/solana_groth16_verifier/src/state/: circuit.rs  mod.rs
tests/: solana_groth16_verifier.ts
