[package]
name = "solana_groth16_verifier"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_groth16_verifier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
solana-program = "1.15.2"
groth16-solana = "0.0.1"
ark-ec = "0.3.0"
ark-bn254 = "0.3.0"
ark-ff = "0.3.0"
